--- a/public/stylesheets/pagination.css
+++ b/public/stylesheets/pagination.css
@@ -10,7 +10,7 @@ body {
     background-color: #EEF0F3;
     border-color: transparent;
     margin:0 auto;
-    width:250px;
+    padding:0;
     text-align: center;
 }
 
