css mobile work

--- a/views/index.ejs
+++ b/views/index.ejs
@@ -34,7 +34,7 @@
             
             
             
-                <div class="card-image" style="background-image: url('../images/buildings-middle.png');min-height: 15rem;" data-image-full="../images/buildings.png">
+                <div class="card-image" style="background-image: url('../images/buildings-middle.png');" data-image-full="../images/buildings.png">
                     
                     <img src="../images/buildings-middle.png" style="background-size: contain;" alt="Buildings" />    
                 </div>    
