--- a/public/stylesheets/navbar.css
+++ b/public/stylesheets/navbar.css
@@ -6,7 +6,7 @@
 }
 
 nav {   
-    padding: 5px 10px;
+    padding: 0 10px;
     position: relative;
     z-index: 99999;
 }
@@ -100,6 +100,7 @@ ul {
     flex-wrap: wrap;
     justify-content: space-between;
     align-items: center;
+    margin-bottom: 0;
 }
 .toggle {
     order: 1;
