--- a/public/stylesheets/project-show.css
+++ b/public/stylesheets/project-show.css
@@ -157,11 +157,13 @@ a:hover {
     max-width:550px;
     padding:0 16px;
     margin-bottom:30px;
+    width:100%;
 }
 
 .description-title {
     font-family: 'Lato', sans-serif;
-    width: 300px;
+    max-width: 300px;
+    width: 50%;
     display: inline-block;
     font-size: 16px;
     line-height: 100%;
@@ -206,7 +208,7 @@ a:hover {
 }
 
 .price-wrapper {
-    margin-top:53px;
+    margin-top: 36px;
 }
 
 .info-wrapper {
@@ -221,7 +223,7 @@ a:hover {
 
 .input-submit-head {
     background-image: linear-gradient(315.87deg, #F34B31 -11.35%, #FFA782 106.98%);
-    padding: 13px 54px;
+    padding: 13px 24px;
     
     color:white;
     border:none;
@@ -255,7 +257,7 @@ a:hover {
       display: flex;
       flex-direction: row;
       align-items: center;
-      margin-top:60px;
+      margin-top:26px;
   }
 
   .gallery-show {
@@ -368,7 +370,7 @@ a:hover {
     object-fit: cover;
     max-width:485px;
     width:100%;
-    height:352px;   
+    
 }
 
 
@@ -492,7 +494,7 @@ a:hover {
         margin-bottom: 0;
     }
     .description-title {
-        
+        width: 75%;
         font-size: 28px;
         line-height: 42px;
         
@@ -695,7 +697,29 @@ a:hover {
 }
     
 
+@media (min-width: 320px) and (max-width: 480px) {
+    .rating {
+        width:100%;
+        max-width: 250px;
+        margin-top:16px;
+    }
 
+   .project-title {
+       font-size: 24px;
+       margin:16px 16px ;
+   }
+
+   #map {
+        height: 293px;
+    }
+
+    .wrapper-icons {
+        margin-top:26px;
+    }
+
+    
+    
+}
 
 
 @media (max-width:1320px) {
@@ -705,10 +729,7 @@ a:hover {
     .details-information {
         margin-bottom:30px;
     }
-    .project-title {
-        margin:23px 16px ;
-        font-size:42px;
-    }
+    
     .gallery-show {
         align-items: center;
         flex-direction: column;
