--- a/views/articles/edit.ejs
+++ b/views/articles/edit.ejs
@@ -68,7 +68,7 @@
 	<div class="form-row">
 		<div class="form-group col-md-6">
 			<p>Вступление - первые две строки:</p>
-			<input type="text" name="introduction" class="form-control" value="<%= article.introduction %>">
+			<input type="text" name="article[introduction]" class="form-control" value="<%= article.introduction %>">
 		</div>	
 	</div>
 
@@ -76,7 +76,7 @@
 	<div class="form-row">
 		<div class="form-group col-md-6">
 			<p>Заключение, после второго фото:</p>
-			<input type="text" name="conclusions" class="form-control" value="<%= article.conclusions %>">
+			<input type="text" name="article[conclusions]" class="form-control" value="<%= article.conclusions %>">
 		</div>	
 	</div>
     
