--- a/views/articles/new.ejs
+++ b/views/articles/new.ejs
@@ -54,7 +54,7 @@
 	<div class="form-row">
 		<div class="form-group col-md-6">
 			<p>Вступление - первые две строки:</p>
-			<input type="text" name="introduction" class="form-control">
+			<input type="text" name="article[introduction]" class="form-control">
 		</div>	
 	</div>
 
@@ -62,7 +62,7 @@
 	<div class="form-row">
 		<div class="form-group col-md-6">
 			<p>Заключение, после второго фото:</p>
-			<input type="text" name="conclusions" class="form-control" >
+			<input type="text" name="article[conclusions]" class="form-control" >
 		</div>	
 	</div>
 
