--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -489,7 +489,9 @@ a:hover {
   text-align: right;
 }
 
-
+.about-text {
+  margin:0 auto;
+}
 
 @media all and (min-width: 900px) { 
     
@@ -911,6 +913,7 @@ a:hover {
 
 
 @media (max-width:1280px) and (min-width:900px) {
+  
   .swiper-wrapper {
     margin-left: -15vw;
   }
