--- a/public/stylesheets/article-show.css
+++ b/public/stylesheets/article-show.css
@@ -143,7 +143,8 @@
     }
     
     .article-image {
-        max-width: 100%;
+        width: 100%;
+        max-width:1200px;
         height: auto;
     }
     
