--- a/views/partials/footer.ejs
+++ b/views/partials/footer.ejs
@@ -14,10 +14,13 @@
         <form action="/contactUs" method="POST" >
             <h2>Нужна консультация?</h2>
             <div class="input-group-footer">
-                <input type="tel" placeholder="Ваше имя" name="name" id="">
-                <input type="text" name="mobile" placeholder="Номер телефона" id="">
-                <input type="submit" value="Свяжитесь со мной">
+                <input type="tel" placeholder="Ваше имя" name="name" id="user-name" required>
+                <input type="text" name="mobile" placeholder="Номер телефона" id="user-mobile" required>
+                <input type="submit" value="Свяжитесь со мной" id="contact-us-submit">
+                
             </div>
+            <div class="alert" role="alert" id="validation-message"></div>
+            
             <h5>Гарантируем сохранность личных данных</h5>
         </form>    
     </div>   
@@ -59,21 +62,21 @@
                     <span aria-hidden="true">&times;</span>
                   </button>
                 </div>
+                
                 <div class="modal-body">
                 <form action="/contactUs" method="POST" >
                     <div class="form-group">
-                      <label for="recipient-name"  class="col-form-label">Имя:</label>
-                      <input type="text" name="name" class="form-control" id="recipient-name">
+                      <label for="user-name"  class="col-form-label">Имя:</label>
+                      <input type="text" name="name" class="form-control" required>
                     </div>
                     <div class="form-group">
-                        <label for="recipient-name" class="col-form-label">Телефон:</label>
-                        <input class="form-control" name="mobile" type="text" id="example-tel-input">
+                        <label for="user-mobile" class="col-form-label">Телефон:</label>
+                        <input class="form-control" name="mobile" type="text" required>
                     </div>
                     <div class="form-group">
                       <label for="message-text"  class="col-form-label">Сообщение</label>
-                      <textarea class="form-control" name="text" id="message-text"></textarea>
+                      <textarea class="form-control" name="text"></textarea>
                     </div>
-                  
                   </div>
                   <div class="modal-footer">
                     <button type="button" class="btn btn-secondary" data-dismiss="modal">Закрыть</button>
@@ -87,5 +90,5 @@
 
 
 
-
+<script src="/javascripts/contact-us-validation.js"></script>
 
