--- a/views/index.ejs
+++ b/views/index.ejs
@@ -138,7 +138,7 @@
 </div>
 <div class="goals-section">
     <h1 class="title-proposition">Предложения для каждого</h1>
-    <h3 class="title-second-mobile">Предложения для каждого</h3>
+    <h3 class="title-second-mobile proposition">Предложения для каждого</h3>
     <div class="goals-images-wrapper">
         <div class="image-goal-wrapper">
             <div class="card-image goal-image" style="background-image: url('../images/personal-middle.png');" data-image-full="../images/personal.png">
