--- a/public/stylesheets/article-index.css
+++ b/public/stylesheets/article-index.css
@@ -38,7 +38,8 @@
 
 
 .article-title-index {
-    font-family: 'Lato';
+    font-family: "Lato-Regular";
+
     font-style: normal;
     font-weight: bold;
     font-size: 16px;
@@ -53,7 +54,8 @@
 
 .createdDate {
     font-size: 12px;
-    font-family: 'Lato';
+    font-family: "Lato-Regular";
+
     font-style: normal;
     font-weight: bold;
     color:#757575;
