--- a/public/stylesheets/contacts.css
+++ b/public/stylesheets/contacts.css
@@ -56,9 +56,8 @@
 }
 
 .contacts-data {
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato-Regular";
     font-style: normal;
-    
     font-weight: 600;
     /* identical to box height, or 150% */
     font-size: 16px;
