--- a/public/stylesheets/index.css
+++ b/public/stylesheets/index.css
@@ -1,6 +1,7 @@
 body {
   font-weight:500;
-  font-family: 'Lato', sans-serif;
+  font-family: "Lato-Regular";
+
 }
 
 a:hover {
@@ -73,7 +74,7 @@ a:hover {
 
 .about-info {
     max-width: 540px;
-    font-family: 'Lato' sans-serif;
+    
     font-size: 14px;
     line-height: 170%;
     /* or 32px */
@@ -322,7 +323,7 @@ a:hover {
   position: absolute;
   z-index:10;
   letter-spacing: -0.03em;
-  font-family: 'Lato' sans-serif;
+  
   font-style: normal;
   font-weight: 500;
   font-size: 16px;
@@ -418,7 +419,7 @@ a:hover {
 }
 
 .goal-text {
-  font-family: 'Lato' sans-serif;
+  
   font-style: normal;
   font-weight: bold;
   font-size: 16px;
