--- a/public/stylesheets/profile.css
+++ b/public/stylesheets/profile.css
@@ -8,7 +8,7 @@
 }
 
 .addNew {
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato-Regular";
     font-style: normal;
     font-weight: bold;
     font-size: 20px;
