--- a/public/stylesheets/project-index.css
+++ b/public/stylesheets/project-index.css
@@ -43,7 +43,7 @@ a:hover {
 }
 
 .project-title-index {
-    font-family: 'Lato';
+    font-family: "Lato-Regular";
     font-style: normal;
     font-weight: bold;
     font-size: 16px; 
