--- a/public/stylesheets/search-article.css
+++ b/public/stylesheets/search-article.css
@@ -20,7 +20,7 @@
     height:80px;
     margin:0;
     padding: 0 45px;
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato-Regular";
     font-style: normal;
     font-weight: 500;
     font-size: 20px;
@@ -54,7 +54,7 @@
     color:white;
     border:none;
     text-transform: uppercase;
-    font-family: 'Lato', sans-serif;
+    font-family: "Lato-Regular";
     font-style: normal;
     font-weight: 500;
     font-size: 18px;
@@ -133,7 +133,7 @@
     flex-direction: column;
     justify-content: center;
     align-items: center;
-    font-family: 'Lato';
+    font-family: "Lato-Regular";
     font-style: normal;
     font-weight: 600;
     text-transform: uppercase;
