--- a/views/404.ejs
+++ b/views/404.ejs
@@ -1,12 +1,13 @@
 <% layout('layouts/boilerplate') -%>
 <head>
-	<link rel='stylesheet' href='/stylesheets/404.css' />
+    <link rel='stylesheet' href='/stylesheets/404.css' />
+    <link href="https://fonts.googleapis.com/css?family=Montserrat&display=swap" rel="stylesheet">
 </head>
 
 <div class="wrapper-not-found">
-    <h2>Упс! Запрашиваемая страница не существует!</h2>
-    <img src="/images/image-404.svg" alt="">
-    <div class="btn"><a href="/">Вернуться на главную</a></div>
+    <div class="notfound-bg"></div>
+    <h2 class="not-found-title">Запрашиваемая страница не существует!</h2>
+    <img src="/images/image-404.svg" alt="not-found-image">
 </div>
 
 
