--- a/views/articles/show.ejs
+++ b/views/articles/show.ejs
@@ -44,15 +44,13 @@
     
     var body = { features: <%- JSON.stringify(article.body) %> };
      
-    let stringHTML = body.features;
+    var stringHTML = body.features;
     
     //Create temp element holder
-    let tempElement = document.createElement("div");
+    var tempElement = document.createElement("div");
     //Add fetched HTML to tempElement
     tempElement.innerHTML = body.features;
-    console.log(tempElement)
-    //Now you can query it as it was a normal DOM element
     
-
+    //Now you can query it as it was a normal DOM element
     document.getElementById('root').appendChild(tempElement);
 </script>
